--- a/puritans.html
+++ b/puritans.html
@@ -42,8 +42,9 @@
                 <ul>15??'s - The Puritans form</ul>
              </p>
              <p><h2>The New World</h2><br>
+                <b>First Settlements</b>
                 <ul>year - Plymout Rock</ul>
-                <ul>year - Thanksgiving</ul>
+                <ul>year - Massachusetts</ul>
 
             
              </p>
