--- a/puritans.html
+++ b/puritans.html
@@ -29,7 +29,7 @@
                 present, they were known for being extremely prudish and 
                 morally strict. In fact, this is where we get the word 
                 Puritanical, which references their work ethic  
-                in addtion to their disdain of pleasure.
+                in addition to their disdain of pleasure.
              </p>
              <p><h2>Origins</h2><br>
                 <b>The Protestant Reformation</b><br>
