--- a/puritans.html
+++ b/puritans.html
@@ -21,10 +21,14 @@
                 bird's eye view of the movement, so I will 
                 not be spending much time exploring the truth of 
                 sterotypes.<br><br>
-                Whether or not people were aware of the players, 
-                two well known roles of the Puritans in history were 
-                as the Pilgrims that landed at Plymouth Rock and 
-                as the instigators of the Salem Witch Trials. 
+                
+                The people we are talking about were Calvinists. They 
+                were further divided into two groups, the Puritans 
+                and the Separatists. (2) Whether or not people were 
+                aware of the players, 
+                two well known roles of these Calvinists in history were 
+                as the Pilgrims that landed at Plymouth Rock (Separatists) and 
+                as the instigators of the Salem Witch Trials (Puritans). 
                 As far as people's opinion of them, both past and 
                 present, they were known for being extremely prudish and 
                 morally strict. In fact, this is where we get the word 
@@ -50,7 +54,10 @@
              </p>
         </main>
         <footer>&copy; 2024 The Proto Realist<br>
-            https://dictionary.cambridge.org/us/dictionary/english/puritanical
+            https://dictionary.cambridge.org/us/dictionary/english/puritanical<br>
+
+            (2)....https://www.worldhistory.org/video/2223/pilgrims-puritans-and-separatists-calvinist-settle
+            /#:~:text=Puritans%20were%20English%20Calvinists%20who,they%20felt%20was%20beyond%20reform.
         </footer>
     </body>
 </html>
