--- a/puritans.html
+++ b/puritans.html
@@ -24,7 +24,9 @@
                 
                 The people we are talking about were Calvinists. They 
                 were further divided into two groups, the Puritans 
-                and the Separatists. (2) Whether or not people were 
+                and the Separatists. They were the same people other 
+                than their position that the Church of England should 
+                be reformed or abandoned. (2)<br><br> Whether or not people were 
                 aware of the players, 
                 two well known roles of these Calvinists in history were 
                 as the Pilgrims that landed at Plymouth Rock (Separatists) and 
