--- a/puritans.html
+++ b/puritans.html
@@ -49,7 +49,7 @@
              </p><br>
              <p><h2>The New World</h2><br>
                 <b>First Settlements</b>
-                <ul>year - Plymout Rock</ul>
+                <ul>year - Plymouth Rock</ul>
                 <ul>year - Massachusetts</ul>
 
                 Plymouth, Massachusetts: Established in 1620 by Separatists. <br>(Plymouth was the first successful permanent English settlement in New England)<br>
