--- a/puritans.html
+++ b/puritans.html
@@ -26,8 +26,8 @@
                 were further divided into two groups, the Puritans 
                 and the Separatists. They were the same people other 
                 than their position that the Church of England should 
-                be reformed or abandoned. (2)<br><br> Whether or not people were 
-                aware of the players, 
+                be reformed or abandoned. (2)<br><br> Whether or not most 
+                us are aware of the players, 
                 two well known roles of these Calvinists in history were 
                 as the Pilgrims that landed at Plymouth Rock (Separatists) and 
                 as the instigators of the Salem Witch Trials (Puritans). 
