--- a/puritans.html
+++ b/puritans.html
@@ -24,8 +24,9 @@
                 
                 The people we are talking about were Calvinists. They 
                 were further divided into two groups, the Puritans 
-                and the Separatists. They were the same people other 
-                than their position that the Church of England should 
+                and the Separatists. They were the same people with the 
+                same beliefs. What distinguished them was their position 
+                on if the Church of England should 
                 be reformed or abandoned. (2)<br><br> Whether or not most 
                 us are aware of the players, 
                 two well known roles of these Calvinists in history were 
