--- a/literature.html
+++ b/literature.html
@@ -18,9 +18,9 @@
         </main>
         <nav>
             <ul>
-                <li><a href="puritans.html">The Puritans</a></li>
-                <li><a href="7gables.html">The House of the Seven Gables</a></li>
-                <li><a href="gatsby.html">The Great Gatsby</a></li>
+                <li class="right-link"><a href="puritans.html">The Puritans</a></li>
+                <li class="left-link"><a href="7gables.html">The House of the Seven Gables</a></li>
+                <li class="left-link"><a href="gatsby.html">The Great Gatsby</a></li>
             </ul>
         </nav>
         <footer>&copy; The Proto Realist</footer>
