--- a/literature.html
+++ b/literature.html
@@ -26,7 +26,7 @@
         <p>Books vs Supplemental Information</p>
         <nav>
             <ul>
-                <li class="right-link"><a href="puritans.html">The Puritanical</a></li>
+                <li class="right-link"><a href="puritans.html">The Puritans</a></li>
             </ul>
         </nav>
         <footer>&copy; The Proto Realist</footer>
