--- a/puritans.html
+++ b/puritans.html
@@ -54,10 +54,10 @@
                 <ul>year - Massachusetts</ul>
 
                 Plymouth, Massachusetts: Established in 1620 by Separatists. <br>(Plymouth was the first successful permanent English settlement in New England)<br>
-                Salem, Massachusetts: Founded in 1626 by Puritans<br>
-                Boston, Massachusetts: Founded in 1630 by Puritans seeking religious freedom<br>
-                Hartford, Connecticut: Settled in 1636 by Puritans from Massachusetts<br>
-                New Haven, Connecticut: Founded in 1638 by a group of Separatists<br>
+                Salem, Massachusetts: Founded in 1626 by Puritans<br><br>
+                Boston, Massachusetts: Founded in 1630 by Puritans seeking religious freedom<br><br>
+                Hartford, Connecticut: Settled in 1636 by Puritans from Massachusetts<br><br>
+                New Haven, Connecticut: Founded in 1638 by a group of Separatists<br><br>
 <br>
                 Harvard University: Founded in 1636 by Puritans<br>
                 Yale University: Established in 1701 by Congregationalists (a later iteration of Puritanism)<br>
