--- a/puritans.html
+++ b/puritans.html
@@ -53,7 +53,7 @@
                 <ul>year - Plymouth Rock</ul>
                 <ul>year - Massachusetts</ul>
 
-                Plymouth, Massachusetts: Established in 1620 by Separatists. <br>(Plymouth was the first successful permanent English settlement in New England)<br>
+                Plymouth, Massachusetts: Established in 1620 by Separatists. <br>(Plymouth was the first successful permanent English settlement in New England)<br><br>
                 Salem, Massachusetts: Founded in 1626 by Puritans<br><br>
                 Boston, Massachusetts: Founded in 1630 by Puritans seeking religious freedom<br><br>
                 Hartford, Connecticut: Settled in 1636 by Puritans from Massachusetts<br><br>
