--- a/literature.html
+++ b/literature.html
@@ -16,14 +16,14 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
             </article>
         </main>
-        <p class="books">Lorem ipsum dolor sit amet imilique impedit repudiandae repellat consequatur?</p>
+        <p class="books"><h3>Book Reviews</h3></p>
         <nav>
             <ul>
                 <li class="left-link"><a href="7gables.html">The House of the Seven Gables</a></li>
                 <li class="left-link"><a href="gatsby.html">The Great Gatsby</a></li>
             </ul>
         </nav>
-        <p class="context">Books vs Supplemental Information</p>
+        <p class="context"><h3>Supplemental Information</h3></p>
         <nav>
             <ul>
                 <li class="right-link"><a href="puritans.html">The Puritans</a></li>
