--- a/literature.html
+++ b/literature.html
@@ -23,10 +23,10 @@
                 <li class="left-link"><a href="gatsby.html">The Great Gatsby</a></li>
             </ul>
         </nav>
-        <p class="context"><h3>Supplemental Information</h3></p>
-        <nav>
+        <nav class="right-link">
             <ul>
-                <li class="right-link"><a href="puritans.html">The Puritans</a></li>
+                <p><h3>Supplemental Information</h3></p>
+                <li><a href="puritans.html">The Puritans</a></li>
             </ul>
         </nav>
         <footer>&copy; The Proto Realist</footer>
