--- a/literature.html
+++ b/literature.html
@@ -18,9 +18,9 @@
         </main>
         <p class="books"><h3>Book Reviews</h3></p>
         <nav>
-            <ul>
-                <li class="left-link"><a href="7gables.html">The House of the Seven Gables</a></li>
-                <li class="left-link"><a href="gatsby.html">The Great Gatsby</a></li>
+            <ul class="left-link">
+                <li><a href="7gables.html">The House of the Seven Gables</a></li>
+                <li><a href="gatsby.html">The Great Gatsby</a></li>
             </ul>
         </nav>
         <nav class="right-link">
