--- a/literature.html
+++ b/literature.html
@@ -16,7 +16,7 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
             </article>
         </main>
-        <p class="books"><h3>Book Reviews</h3></p>
+        <p><h3>Book Reviews</h3></p>
         <nav>
             <ul class="left-link">
                 <li><a href="7gables.html">The House of the Seven Gables</a></li>
