--- a/literature.html
+++ b/literature.html
@@ -29,6 +29,6 @@
                 <li><a href="puritans.html">The Puritans</a></li>
             </ul>
         </nav>
-        <footer>&copy; The Proto Realist</footer>
+        <footer>&copy; 2024 The Proto Realist</footer>
     </body>
 </html>
