--- a/literature.html
+++ b/literature.html
@@ -13,7 +13,10 @@
         <img id="book-garden" src="DALLE-book2.png">
         <main>
             <article>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, quod eius? Quaerat tenetur, nihil perferendis voluptatem repellendus, laudantium officiis facere quam autem non pariatur. Rerum molestiae ut laudantium laboriosam fugit?</p>
+                <p>Here I have links to articles I have written about various types of literature. 
+                    I have no intention of creating an academic level study of any subject. I just 
+                    enjoy reading and gaining new understading. This whole webpage is merely for the 
+                    purpose of sharing the things I have found interesting along the way.
             </article>
         </main>
         <p><h3>Book Reviews</h3></p>
