--- a/literature.html
+++ b/literature.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" href="style-literature.css">
     </head>
     <header>
-        <h1>Literature</h1>
+
     </header>
     <body>
+        <h1 id="title">Literature</h1>
         <img id="book-garden" src="DALLE-book2.png">
         <main>
             <article>
