--- a/literature.html
+++ b/literature.html
@@ -10,7 +10,7 @@
 
     </header>
     <body>
-        <h1 id="title">Literature</h1>
+        <div id="title"><h1>Literature</h1></div>
         <img id="book-garden" src="DALLE-book2.png">
         <main>
             <article>
