--- a/literature.html
+++ b/literature.html
@@ -13,7 +13,7 @@
         <img id="book-garden" src="DALLE-book2.png">
         <main>
             <article>
-                <h1 id="title"></h1>><b>Literature</b></h1><br><br>
+                <h1 id="title"><b>Literature</b></h1><br><br>
                 <p>Here I have links to articles I have written about various types of literature. 
                     I have no intention of creating an academic level study of any subject. I just 
                     enjoy reading and gaining new understading. This whole webpage is merely for the 
