--- a/literature.html
+++ b/literature.html
@@ -12,8 +12,8 @@
     <body>
         <main>
             <div class="1st-div">
-                <div>img id="book-garden" src="DALLE-book2.png"></div><
-                <div><h1 id="title"><b>Literature</b></h1><br><br><br></div><
+                <div><img id="book-garden" src="DALLE-book2.png"></div>
+                <div><h1 id="title"><b>Literature</b></h1><br><br><br></div>
                 <div><p>Here I have links to articles I have written about various types of literature. 
                     I have no intention of creating an academic level study of any subject. I just 
                     enjoy reading and gaining new understading. This whole webpage is merely for the 
