--- a/literature.html
+++ b/literature.html
@@ -6,14 +6,18 @@
         <title>Literature</title>
         <link rel="stylesheet" href="style-literature.css">
     </head>
-    <div class="container">
-        <img src="DALLE-book2.png" alt="Book Image">
-        <h1><b>Literature</b></h1>
-        <p>Here I have links to articles I have written about various types of literature. 
-            I have no intention of creating an academic level study of any subject. I just 
-            enjoy reading and gaining new understading. This whole webpage is merely for the 
-            purpose of sharing the things I have found interesting along the way.</p>
-        
+    <div class="top-content">
+        <img src="DALLE-book2.png" alt="Book Image" class="top-image">
+        <div class="top-text">
+            <h1><b>Literature</b></h1>
+            <p>Here I have links to articles I have written about various types of literature. 
+                I have no intention of creating an academic level study of any subject. I just 
+                enjoy reading and gaining new understading. This whole webpage is merely for the 
+                purpose of sharing the things I have found interesting along the way.</p>
+        </div>
+    </div>
+
+    <div class="middle=content">
         <h3>Book Reviews</h3>
         <ul>
             <li><a href="7gables.html">The House of the Seven Gables</a></li>
