--- a/literature.html
+++ b/literature.html
@@ -17,13 +17,14 @@
         <img src="DALLE-book2.png" alt="Book Image" class="top-image">
     </div>
 
-    <div class="middle=content">
+    
         <h3>Book Reviews</h3>
         <ul>
             <li><a href="7gables.html">The House of the Seven Gables</a></li>
             <li><a href="gatsby.html">The Great Gatsby</a></li>
         </ul>
 
+    <div class="link-right">
         <h3>Supplemental Information</h3>
         <ul>
             <li><a href="puritans.html">The Puritans</a></li>
