--- a/7gables.html
+++ b/7gables.html
@@ -67,7 +67,7 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref3"><a href="#note3">3</a
         is the perfect way to enter the soul of someone who truly finds peace in these things.</p>
       </article>
       <figure>
-      <img src="DALLE-garden.png" alt="The garden and chickens" width="350" height="350">
+      <img src="DALLE-garden.png" alt="The garden and chickens" width="350">
       <figcaption>
         Clifford and Phoebe in the garden 
         <sup id="ref202"><a href="#note202">202</a></sup>
