--- a/7gables.html
+++ b/7gables.html
@@ -59,6 +59,13 @@ Doctor Grimshawe's Secret: A Romance (1883) <sup id="ref3"><a href="#note3">3</a
 
         <p>***</p>
         <p><b>Chapter 10</b><br><i>The Pyncheon Garden</i><p>
+          <figure>
+            <img src="DALLE-garden.png" alt="The garden and chickens" width="350">
+            <figcaption>
+              Clifford and Phoebe in the garden 
+              <sup id="ref202"><a href="#note202">202</a></sup>
+            </figcaption>
+            </figure>
         <p>Today while walking and listening, Hawthorne gave a lot of space to describing the garden and the chickens. 
         I have had several years experience being around gardens and chickens, so I am very familiar with this kind of setting. 
         Hawthorne's description of the tiniest details and his ability to draw out the most nostalgic parts were 
