--- a/literature.html
+++ b/literature.html
@@ -24,9 +24,9 @@
             <li><a href="gatsby.html">The Great Gatsby</a></li>
         </ul>
 
-    <div class="link-right">
-        <h3>Supplemental Information</h3>
-        <ul>
+    <div class="supplemental">
+        <h3 class="title-right">Supplemental Information</h3>
+        <ul class="link-right">
             <li><a href="puritans.html">The Puritans</a></li>
         </ul>
     </div>
