--- a/literature.html
+++ b/literature.html
@@ -6,30 +6,30 @@
         <title>Literature</title>
         <link rel="stylesheet" href="style-literature.css">
     </head>
-    <div class="top-content">
-        <div class="top-text">
+    <header>
+        <div class="header-text">
             <h1><b>Literature</b></h1>
             <p>Here I have links to articles I have written about various types of literature. 
                 I have no intention of creating an academic level study of any subject. I just 
                 enjoy reading and gaining new understading. This whole webpage is merely for the 
                 purpose of sharing the things I have found interesting along the way.</p>
-        </div>
-        <img src="DALLE-book2.png" alt="Book Image" class="top-image">
-    </div>
+            </div>
+        <img src="DALLE-book2.png" alt="Book Image" class="header-image">
+    </header>
 
-    
+    <section class="book-reviews">
         <h3>Book Reviews</h3>
         <ul>
             <li><a href="7gables.html">The House of the Seven Gables</a></li>
             <li><a href="gatsby.html">The Great Gatsby</a></li>
         </ul>
-
-    <div class="supplemental">
-        <h3 class="title-right">Supplemental Information</h3>
-        <ul class="link-right">
+    </section>
+    <section class="supplemental">
+        <h3>Supplemental Information</h3>
+        <ul>
             <li><a href="puritans.html">The Puritans</a></li>
         </ul>
-    </div>
+    </section>
               <footer>&copy; 2024 The Proto Realist</footer>
             </body>
 </html>
