--- a/literature.html
+++ b/literature.html
@@ -6,16 +6,14 @@
         <title>Literature</title>
         <link rel="stylesheet" href="style-literature.css">
     </head>
-    <header>
-        <div class="header-text">
+    <section class="header-text">
             <h1><b>Literature</b></h1>
+            <img src="DALLE-book2.png" alt="Book Image" class="header-image">
             <p>Here I have links to articles I have written about various types of literature. 
                 I have no intention of creating an academic level study of any subject. I just 
                 enjoy reading and gaining new understading. This whole webpage is merely for the 
                 purpose of sharing the things I have found interesting along the way.</p>
-                <img src="DALLE-book2.png" alt="Book Image" class="header-image">
-            </div>
-    </header>
+    </section>
 
     <section class="book-reviews">
         <h3>Book Reviews</h3>
