--- a/literature.html
+++ b/literature.html
@@ -6,28 +6,31 @@
         <title>Literature</title>
         <link rel="stylesheet" href="style-literature.css">
     </head>
-    <section class="header-text">
+    <body>
+         <section class="header-text">
             <img src="DALLE-book2.png" alt="Book Image" class="header-image">
             <h1><b>Literature</b></h1>
             <p>Here I have links to articles I have written about various types of literature. 
                 I have no intention of creating an academic level study of any subject. I just 
                 enjoy reading and gaining new understading. This whole webpage is merely for the 
                 purpose of sharing the things I have found interesting along the way.</p>
-    </section>
+         </section>
 
-    <section class="book-reviews">
+          <section class="book-reviews">
         <h3>Book Reviews</h3>
         <ul>
             <li><a href="7gables.html">The House of the Seven Gables</a></li>
             <li><a href="gatsby.html">The Great Gatsby</a></li>
         </ul>
-    </section>
-    <section class="supplemental">
-        <h3>Supplemental Information</h3>
-        <ul>
-            <li><a href="puritans.html">The Puritans</a></li>
-        </ul>
-    </section>
-              <footer>&copy; 2024 The Proto Realist</footer>
-            </body>
+         </section>
+
+         <section class="supplemental">
+             <h3>Supplemental Information</h3>
+              <ul>
+                    <li><a href="puritans.html">The Puritans</a></li>
+              </ul>
+         </section>
+
+         <footer>&copy; 2024 The Proto Realist</footer>
+    </body>
 </html>
