--- a/literature.html
+++ b/literature.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style-literature.css">
     </head>
     <body>
-         <section class="header-text">
+         <section class="header-content">
             <img src="DALLE-book2.png" alt="Book Image" class="header-image">
             <h1><b>Literature</b></h1>
             <p>Here I have links to articles I have written about various types of literature. 
