--- a/literature.html
+++ b/literature.html
@@ -27,7 +27,7 @@
          <section class="supplemental">
              <h3>Supplemental Information</h3>
               <ul>
-                    <li><a href="puritans.html">The Puritans</a></li>
+                    <li><a href="puritans.html">The Separatists/Puritans</a></li>
               </ul>
          </section>
 
