--- a/puritans.html
+++ b/puritans.html
@@ -24,10 +24,10 @@
                 
                 The people we are talking about were Calvinists. They 
                 were further divided into two groups, the Puritans 
-                and the Separatists. They were the same people with the 
-                same beliefs. What distinguished them was their position 
-                on if the Church of England should 
-                be reformed or abandoned. (2)<br><br> Whether or not most 
+                and the Separatists. They were similar in many regards, 
+                but their greatest distinction between them was their position 
+                on if the Church of England should be reformed or abandoned. 
+                (2)<br><br> Whether or not most 
                 us are aware of the players, 
                 two well known roles of these Calvinists in history were 
                 as the Pilgrims that landed at Plymouth Rock (Separatists) and 
@@ -50,7 +50,7 @@
              </p><br>
              <p><h2>The New World</h2><br>
                 <b>First Settlements</b>
-                <ul>year - Plymouth Rock</ul>
+                <ul>1620 - Plymouth Rock</ul>
                 <ul>year - Massachusetts</ul>
 
                 Plymouth, Massachusetts: Established in 1620 by Separatists. <br>(Plymouth was the first successful permanent English settlement in New England)<br><br>
