--- a/puritans.html
+++ b/puritans.html
@@ -22,14 +22,16 @@
                 not be spending much time exploring the truth of 
                 sterotypes.<br><br>
                 
-                The people we are talking about were Calvinists. They 
+                The people we are talking about were theologically descended 
+                from Calvinists, even though they existed within the Anglican 
+                Church of England. They 
                 were further divided into two groups, the Puritans 
                 and the Separatists. They were similar in many regards, 
-                but their greatest distinction between them was their position 
+                but their greatest difference between them was their position 
                 on if the Church of England should be reformed or abandoned. 
-                (2)<br><br> Whether or not most 
-                us are aware of the players, 
-                two well known roles of these Calvinists in history were 
+                (2) They remained as distinct groups even in the New World. 
+                <br><br> Whether or not most us are aware of the players, 
+                two well known roles of these movements in history were 
                 as the Pilgrims that landed at Plymouth Rock (Separatists) and 
                 as the instigators of the Salem Witch Trials (Puritans). 
                 As far as people's opinion of them, both past and 
