--- a/puritans.html
+++ b/puritans.html
@@ -22,9 +22,9 @@
                 not be spending much time exploring the truth of 
                 sterotypes.<br><br>
                 
-                The people we are talking about were theologically descended 
-                from Calvinists, even though they existed within the Anglican 
-                Church of England. They 
+                Even though they existed within the Anglican 
+                Church of England. The people we are talking about 
+                were theologically descended from Calvinists, They 
                 were further divided into two groups, the Puritans 
                 and the Separatists. They were similar in many regards, 
                 but their greatest difference between them was their position 
@@ -49,20 +49,21 @@
              <p><b>The English Reformation</b><br>
                 <ul>1534 - Henry the 8th passes the Act of Supremacy</ul>
                 <ul>15??'s - The Puritans form</ul>
+                <ul>162? - 164? - The Great Migration</ul>
              </p><br>
              <p><h2>The New World</h2><br>
                 <b>First Settlements</b>
                 <ul>1620 - Plymouth Rock</ul>
                 <ul>year - Massachusetts</ul>
 
-                Plymouth, Massachusetts: Established in 1620 by Separatists. <br>(Plymouth was the first successful permanent English settlement in New England)<br><br>
+                Plymouth, Massachusetts: Established in 1620 by Separatists.<br><br>
                 Salem, Massachusetts: Founded in 1626 by Puritans<br><br>
                 Boston, Massachusetts: Founded in 1630 by Puritans seeking religious freedom<br><br>
                 Hartford, Connecticut: Settled in 1636 by Puritans from Massachusetts<br><br>
                 New Haven, Connecticut: Founded in 1638 by a group of Separatists<br><br>
 <br>
                 Harvard University: Founded in 1636 by Puritans<br>
-                Yale University: Established in 1701 by Congregationalists (a later iteration of Puritanism)<br>
+                Yale University: Established in 1701 by Congregationalists (Descended from Puritanism)<br>
 
              </p>
         </main>
