--- a/puritans.html
+++ b/puritans.html
@@ -43,13 +43,12 @@
              <p><h2>Origins</h2><br>
                 <b>The Protestant Reformation</b><br>
                 <ul>1517 - Martin Luther nails his 95 Thesis to the church door (<i>according to tradition</i>)</ul>
-                <ul>1521 - Ulrich Zwingli</ul>
+                <ul>1522 - Ulrich Zwingli openly challenges the Catholic Church</ul>
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
              </p>
              <p><b>The English Reformation</b><br>
                 <ul>1534 - Henry the 8th passes the Act of Supremacy</ul>
-                <ul>15??'s - The Puritans form</ul>
-                <ul>162? - 164? - The Great Migration</ul>
+                <ul>1620s & 1630s - The Puritan Great Migration</ul>
              </p><br>
              <p><h2>The New World</h2><br>
                 <b>First Settlements</b>
