--- a/puritans.html
+++ b/puritans.html
@@ -47,7 +47,9 @@
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
              </p>
              <p><b>The English Reformation</b><br>
-                <ul>1534 - Henry the 8th passes the Act of Supremacy</ul>
+                <ul>1534 - Henry the 8th passes the Act of Supremacy<br>(This break from the Roman Church kept 
+                many of the Catholic traditions. This laid the seeds for the Puritans to rise up from within the 
+                Church of England.)</ul>
                 <ul>1620s & 1630s - The Puritan Great Migration</ul>
              </p><br>
              <p><h2>The New World</h2><br>
