--- a/puritans.html
+++ b/puritans.html
@@ -54,8 +54,8 @@
              </p><br>
              <p><h2>The New World</h2><br>
                 <b>First Settlements</b>
-                <ul>1620 - Plymouth Rock</ul>
-                <ul>year - Massachusetts</ul>
+                <ul>1620 - The pilgrims land at Plymouth Rock</ul>
+                <ul>1626 - The Puritans establish Naumkeag/Salem, Massachusetts (It was renamed Salem in 1629)</ul>
 
                 Plymouth, Massachusetts: Established in 1620 by Separatists.<br><br>
                 Salem, Massachusetts: Founded in 1626 by Puritans<br><br>
