--- a/puritans.html
+++ b/puritans.html
@@ -50,20 +50,19 @@
                 <ul>1534 - Henry the 8th passes the Act of Supremacy<br>(This break from the Roman Church kept 
                 many of the Catholic traditions. This laid the seeds for the Puritans to rise up from within the 
                 Church of England.)</ul>
-                <ul>1620s & 1630s - The Puritan Great Migration</ul>
+                <ul>1620s & 1630s - The Puritan Great Migration.</ul>
              </p><br>
              <p><h2>The New World</h2><br>
                 <b>First Settlements</b>
-                <ul>1620 - The pilgrims land at Plymouth Rock</ul>
-                <ul>1626 - The Puritans establish Naumkeag/Salem, Massachusetts (It was renamed Salem in 1629)</ul>
-
-                Plymouth, Massachusetts: Established in 1620 by Separatists.<br><br>
-                Salem, Massachusetts: Founded in 1626 by Puritans<br><br>
-                Boston, Massachusetts: Founded in 1630 by Puritans seeking religious freedom<br><br>
-                Hartford, Connecticut: Settled in 1636 by Puritans from Massachusetts<br><br>
-                New Haven, Connecticut: Founded in 1638 by a group of Separatists<br><br>
-<br>
-                Harvard University: Founded in 1636 by Puritans<br>
+                <ul>1620 - Pilgrims(Separatists) land at Plymouth Rock.</ul>
+                <ul>1626 - Puritans establish Naumkeag/Salem, Massachusetts (It was renamed Salem in 1629)</ul>
+                <ul>1630 - Puritans founded Boston, Massachusetts.</ul>
+                <ul>1635 - Puritans settled Harford, Connecticut</ul>
+                <ul>1638 - Separatist found New Haven, Connecticut</ul>
+                <br><br>
+                <b>Notable Institutions</b>
+                <ul>1636 - Puritans found Harvard University</ul>
+                <br>
                 Yale University: Established in 1701 by Congregationalists (Descended from Puritanism)<br>
 
              </p>
