--- a/puritans.html
+++ b/puritans.html
@@ -53,17 +53,17 @@
                 <ul>1620s & 1630s - The Puritan Great Migration.</ul>
              </p><br>
              <p><h2>The New World</h2><br>
-                <b>First Settlements</b>
-                <ul>1620 - Pilgrims(Separatists) land at Plymouth Rock.</ul>
+                <b>First Signifacant Settlements</b>
+                <ul>1620 - Plymouth Rock.</ul>
                 <ul>1626 - Puritans establish Naumkeag/Salem, Massachusetts (It was renamed Salem in 1629)</ul>
-                <ul>1630 - Puritans founded Boston, Massachusetts.</ul>
-                <ul>1635 - Puritans settled Harford, Connecticut</ul>
-                <ul>1638 - Separatist found New Haven, Connecticut</ul>
+                <ul>1630 - Boston, Massachusetts.</ul>
+                <ul>1635 - Harford, Connecticut</ul>
+                <ul>1638 - New Haven, Connecticut</ul>
                 <br><br>
                 <b>Notable Institutions</b>
-                <ul>1636 - Puritans found Harvard University</ul>
+                <ul>1636 - Harvard University</ul>
+                <ul>1701 - Yale University</ul>
                 <br>
-                Yale University: Established in 1701 by Congregationalists (Descended from Puritanism)<br>
 
              </p>
         </main>
