--- a/puritans.html
+++ b/puritans.html
@@ -55,7 +55,7 @@
              <p><h2>The New World</h2><br>
                 <b>First Signifacant Settlements</b>
                 <ul>1620 - Plymouth Rock.</ul>
-                <ul>1626 - Puritans establish Naumkeag/Salem, Massachusetts (It was renamed Salem in 1629)</ul>
+                <ul>1626 - Salem, Massachusetts</ul>
                 <ul>1630 - Boston, Massachusetts.</ul>
                 <ul>1635 - Harford, Connecticut</ul>
                 <ul>1638 - New Haven, Connecticut</ul>
