--- a/puritans.html
+++ b/puritans.html
@@ -42,7 +42,7 @@
              </p>
              <p><h2>Origins</h2><br>
                 <b>The Protestant Reformation</b><br>
-                <ul>1517 - Martin Luther nails his 95 Thesis to the church door (<i>according to tradition</i>)</ul>
+                <ul>1517 - Martin Luther nails his 95 Thesis to the church door</ul>
                 <ul>1522 - Ulrich Zwingli openly challenges the Catholic Church</ul>
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
              </p>
