--- a/puritans.html
+++ b/puritans.html
@@ -22,11 +22,10 @@
                 not be spending much time exploring the truth of 
                 sterotypes.<br><br>
                 
-                Even though they existed within the Anglican 
-                Church of England. The people we are talking about 
-                were theologically descended from Calvinists, They 
-                were further divided into two groups, the Puritans 
-                and the Separatists. They were similar in many regards, 
+                Even though they developed within the Anglican 
+                Church of England, the people we are talking about 
+                were theologically descended from Calvinists. We know them as 
+                the Puritans and the Separatists. They were similar in many regards, 
                 but their greatest difference between them was their position 
                 on if the Church of England should be reformed or abandoned. 
                 (2) They remained as distinct groups even in the New World. 
