--- a/puritans.html
+++ b/puritans.html
@@ -25,10 +25,9 @@
                 Even though they developed within the Anglican 
                 Church of England, the people we are talking about 
                 were theologically descended from Calvinists. We know them as 
-                the Puritans and the Separatists. They were similar in many regards, 
-                but their greatest difference between them was their position 
-                on if the Church of England should be reformed or abandoned. 
-                (2) They remained as distinct groups even in the New World. 
+                the Puritans and the Separatists. They were similar to each other 
+                in many regards, but their greatest difference between them was their position 
+                on if the Church of England should be reformed or abandoned. (2) 
                 <br><br> Whether or not most us are aware of the players, 
                 two well known roles of these movements in history were 
                 as the Pilgrims that landed at Plymouth Rock (Separatists) and 
@@ -37,7 +36,7 @@
                 present, they were known for being extremely prudish and 
                 morally strict. In fact, this is where we get the word 
                 Puritanical, which references their work ethic  
-                in addition to their disdain of pleasure.
+                in addition to their austerity.
              </p>
              <p><h2>Origins</h2><br>
                 <b>The Protestant Reformation</b><br>
