--- a/puritans.html
+++ b/puritans.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Puritans</title>
+        <link rel="stylesheet" href="style7gable.css">
     </head>
     <header>
         <h1>The Puritans</h1>
