--- a/puritans.html
+++ b/puritans.html
@@ -41,6 +41,15 @@
              </p>
              <p><h2>Origins</h2><br>
                 <b>The Protestant Reformation</b><br>
+                <p>When Martin Luther published his 95 thesis in 1517, he started a series of events 
+                    that ultimately led to an uprising within the Catholic Church. Trouble had already 
+                    been fermenting for decades leading up to that moment. Many regarded the Roman Church 
+                    as having become corrupt with the wanton selling of indulgenses being one of the 
+                    major points of contention. Martin Luther just happened to be the right person at 
+                    the right time to gain support from influential and powerful players in Europe that 
+                    helped the movement gain a foothold.<br><br>
+                    
+                </p>
                 <ul>1517 - Martin Luther nails his 95 Thesis to the church door</ul>
                 <ul>1522 - Ulrich Zwingli openly challenges the Catholic Church</ul>
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
