--- a/puritans.html
+++ b/puritans.html
@@ -48,7 +48,17 @@
                     major points of contention. Martin Luther just happened to be the right person at 
                     the right time to gain support from influential and powerful players in Europe that 
                     helped the movement gain a foothold.<br><br>
+                    Since Luther is considered the spark that lit the Reformation blaze, he is a good starting 
+                    point when looking into the origins of the Puritans. Theologically, they are not very 
+                    similar to Luther, but since he started the fracture of the Church, he allowed for an 
+                    environment in which disenting beliefs spread. There were many belief systems within the 
+                    new movements of the Reformation. Most were already being debated within the Roman Church 
+                    before the break. Now that the fear of being excumincated was no longer something to be feared, highly 
+                    intelligent people with forward thinking and sometimes extremist ideas were freed to 
+                    experiment. Sometimes to societies benefit...sometimes not.
+
                     
+                    Ulrich Zwingli is the first step in a 
                 </p>
                 <ul>1517 - Martin Luther nails his 95 Thesis to the church door</ul>
                 <ul>1522 - Ulrich Zwingli openly challenges the Catholic Church</ul>
