--- a/puritans.html
+++ b/puritans.html
@@ -56,7 +56,8 @@
                     before the break. Now that the fear of being excumincated was no longer something to be feared, highly 
                     intelligent people with forward thinking and sometimes extremist ideas were freed to 
                     experiment. Sometimes to societies benefit...sometimes not.
-
+                    One of our first idealogical step toward Puritanism was under the guidance of Ulrich 
+                    Zwingli.
                     
                     Ulrich Zwingli is the first step in a 
                 </p>
