--- a/puritans.html
+++ b/puritans.html
@@ -56,8 +56,15 @@
                     before the break. Now that the fear of being excumincated was no longer something to be feared, highly 
                     intelligent people with forward thinking and sometimes extremist ideas were freed to 
                     experiment. Sometimes to societies benefit...sometimes not.
-                    One of our first idealogical step toward Puritanism was under the guidance of Ulrich 
-                    Zwingli.
+                    One of our first idealogical steps toward Puritanism was under the guidance of Ulrich 
+                    Zwingli. Even though there is still a leap to get to the Puritans from Zwingli, he planted 
+                    several seeds that were adopted by Calvin and then passed on again. Luther was theologillay 
+                    closer to the Roman Church compared to many progressive thinkers. These small difference 
+                    would grow overtime.<br><br>For example, both acknowledged the importance of education, 
+                    but Zwingli pushed for a complete overhaul. He also wanted a major focus on classical 
+                    education, unlike Luther who wanted to focus on Christian Doctrine. Zwingli also enabled 
+                    congregations to operate in more self-governed fashion that would be more integrated in the 
+                    community. This 
                     
                     Ulrich Zwingli is the first step in a 
                 </p>
