--- a/puritans.html
+++ b/puritans.html
@@ -63,10 +63,10 @@
                     would grow overtime.<br><br>For example, both acknowledged the importance of education, 
                     but Zwingli pushed for a complete overhaul. He also wanted a major focus on classical 
                     education, unlike Luther who wanted to focus on Christian Doctrine. Zwingli also enabled 
-                    congregations to operate in more self-governed fashion that would be more integrated in the 
-                    community. This 
+                    congregations to operate in a more self-governed fashion that would be more integrated with 
+                    the community. This, among his many social reforms would eventually grow into the Puritans 
+                    unique communities revolutionary social behaviors<br><br>
                     
-                    Ulrich Zwingli is the first step in a 
                 </p>
                 <ul>1517 - Martin Luther nails his 95 Thesis to the church door</ul>
                 <ul>1522 - Ulrich Zwingli openly challenges the Catholic Church</ul>
