--- a/puritans.html
+++ b/puritans.html
@@ -57,7 +57,7 @@
                     intelligent people with forward thinking and sometimes extremist ideas were freed to 
                     experiment. Sometimes to societies benefit...sometimes not.
                     One of our first idealogical steps toward Puritanism was under the guidance of Ulrich 
-                    Zwingli. Even though there is still a leap to get to the Puritans from Zwingli, he planted 
+                    Zwingli who operated in Zurich, Switzerland. Even though there is still a leap to get to the Puritans from Zwingli, he planted 
                     several seeds that were adopted by Calvin and then passed on again. Luther was theologillay 
                     closer to the Roman Church compared to many progressive thinkers. These small difference 
                     would grow overtime.<br><br>For example, both acknowledged the importance of education, 
