--- a/puritans.html
+++ b/puritans.html
@@ -61,11 +61,11 @@
                     several seeds that were adopted by Calvin and then passed on again. Luther was theologillay 
                     closer to the Roman Church compared to many progressive thinkers. These small difference 
                     would grow overtime.<br><br>For example, both acknowledged the importance of education, 
-                    but Zwingli pushed for a complete overhaul. He also wanted a major focus on classical 
-                    education, unlike Luther who wanted to focus on Christian Doctrine. Zwingli also enabled 
-                    congregations to operate in a more self-governed fashion that would be more integrated with 
-                    the community. This, among his many social reforms would eventually grow into the Puritans 
-                    unique communities revolutionary social behaviors<br><br>
+                    but Zwingli pushed for a complete overhaul. Unlike Luther who wanted to focus on Christian 
+                    Doctrine as the sole education, Zwingli wanted a major focus on classical education. 
+                    Zwingli also enabled congregations to operate in a more self-governed fashion that would 
+                    be more integrated with the community. This, among his many social reforms would eventually 
+                    grow into the Puritans unique communities and revolutionary social behaviors<br><br>
                     
                 </p>
                 <ul>1517 - Martin Luther nails his 95 Thesis to the church door</ul>
