--- a/puritans.html
+++ b/puritans.html
@@ -15,7 +15,11 @@
                 The purpose of these articles is to give basic 
                 background information to help with the context 
                 of specific events or characters. It is not 
-                meant for an exhaustive study.
+                meant for an exhaustive study. History, as can 
+                be expected, is very complicated. I am oversimplifying 
+                the history, but the benefit is a simple way to connect 
+                the dots on Puritan origins without commiting to a 
+                full study of the history.
             </p>
             <p><b>Common Stereotypes</b><br> 
                 I am mostly focused on a broad, 
