--- a/puritans.html
+++ b/puritans.html
@@ -22,7 +22,7 @@
                 full study of the history.
             </p>
             <p><b>Common Stereotypes</b><br> 
-                I am mostly focused on a broad, 
+                I am mostly focused on a simplistic, 
                 bird's eye view of the movement, so I will 
                 not be spending much time exploring the truth of 
                 sterotypes.<br><br>
