--- a/puritans.html
+++ b/puritans.html
@@ -31,7 +31,7 @@
                 Church of England, the people we are talking about 
                 were theologically descended from Calvinists. We know them as 
                 the Puritans and the Separatists. They were similar to each other 
-                in many regards, but their greatest difference between them was their position 
+                in many regards, but the greatest difference between them was their position 
                 on if the Church of England should be reformed or abandoned. (2) 
                 <br><br> Whether or not most us are aware of the players, 
                 two well known roles of these movements in history were 
@@ -68,7 +68,8 @@
                     but Zwingli pushed for a complete overhaul. Unlike Luther who wanted to focus on Christian 
                     Doctrine as the sole education, Zwingli wanted a major focus on classical education. 
                     Zwingli also enabled congregations to operate in a more self-governed fashion that would 
-                    be more integrated with the community. This, among his many social reforms would eventually 
+                    be more integrated with the community. This, among his many social reforms would be adopted by, 
+                    and expanded upon by John Calvin. All of this would eventually 
                     grow into the Puritans unique communities and revolutionary social behaviors<br><br>
                     
                 </p>
