--- a/puritans.html
+++ b/puritans.html
@@ -12,7 +12,7 @@
     <body>
         <main>
             <p><b>Intentions</b><br>
-                The purpose of these articles is to give basic 
+                The purpose of this article is to give basic 
                 background information to help with the context 
                 of specific events or characters. It is not 
                 meant for an exhaustive study. History, as can 
@@ -70,7 +70,7 @@
                     Zwingli also enabled congregations to operate in a more self-governed fashion that would 
                     be more integrated with the community. This, among his many social reforms would be adopted by, 
                     and expanded upon by John Calvin. All of this would eventually 
-                    grow into the Puritans unique communities and revolutionary social behaviors<br><br>
+                    grow into the Puritan's unique communities and revolutionary social behaviors<br><br>
                     
                 </p>
                 <ul>1517 - Martin Luther nails his 95 Thesis to the church door</ul>
