--- a/puritans.html
+++ b/puritans.html
@@ -15,9 +15,9 @@
                 The purpose of this article is to give basic 
                 background information to help with the context 
                 of specific events or characters. It is not 
-                meant for an exhaustive study. History, as can 
-                be expected, is very complicated. I am oversimplifying 
-                the history, but the benefit is a simple way to connect 
+                meant for an exhaustive study. History, is very complicated and 
+                I am oversimplifying many things. 
+                The point is a simple way to connect 
                 the dots on Puritan origins without commiting to a 
                 full study of the history.
             </p>
@@ -63,13 +63,13 @@
                     One of our first idealogical steps toward Puritanism was under the guidance of Ulrich 
                     Zwingli who operated in Zurich, Switzerland. Even though there is still a leap to get to the Puritans from Zwingli, he planted 
                     several seeds that were adopted by Calvin and then passed on again. Luther was theologillay 
-                    closer to the Roman Church compared to many progressive thinkers. These small difference 
+                    closer to the Roman Church compared to many progressive thinkers like Zwingli. These small difference 
                     would grow overtime.<br><br>For example, both acknowledged the importance of education, 
                     but Zwingli pushed for a complete overhaul. Unlike Luther who wanted to focus on Christian 
                     Doctrine as the sole education, Zwingli wanted a major focus on classical education. 
                     Zwingli also enabled congregations to operate in a more self-governed fashion that would 
                     be more integrated with the community. This, among his many social reforms would be adopted by, 
-                    and expanded upon by John Calvin. All of this would eventually 
+                    and expanded upon by John Calvin. Many new ideas like this would eventually 
                     grow into the Puritan's unique communities and revolutionary social behaviors<br><br>
                     
                 </p>
