--- a/puritans.html
+++ b/puritans.html
@@ -78,7 +78,17 @@
                 <ul>1536 - John Calvin publishes Institutes of the Christian Religion</ul>
              </p>
              <p><b>The English Reformation</b><br>
-                <ul>1534 - Henry the VIII passes the Act of Supremacy</ul>
+                Even though Zwingli and Calvin's were in Switzerland during their day, their ideas had spread and 
+                would be adopted by people in manay places. This where we get to the English Reformation and the 
+                formation of the Anglican Church. Henry VIII was a supporter of the Catholic Church during his 
+                early years. Trouble started because his marriage to Catherine of Aragon had produced no male heirs 
+                and he had fallen in love with Catherine's ladie-in-waiting, Anne Boleyn. The Church refused to 
+                give him a divorce, so he eventually married her in private. Soon after, in a power grab, Henry VIII 
+                passed the Act of Supremacy which declared him the head of the Church of England. This severed the 
+                power of the Roman Church over England. History is complicated and events do not happen in a vacuum. 
+                His desire for a divorce was just a very prominent motive of which we are aware.<br><br>
+
+                <ul>1534 - Henry VIII passes the Act of Supremacy</ul>
                 <ul>1620s & 1630s - The Puritan Great Migration.</ul>
              </p><br>
              <p><h2>The New World</h2><br>
